1 modify project cfg 2 mod deps building bat

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 /NSIS_agent_setup/vc2008_redist_9.00.21022.8_for_Windows_2000/
 External_Deps/x64_OCS_Make_Required_Libs.bat
-/External_Deps/curl-*
-/External_Deps/net-snmp-*
-/External_Deps/openssl-*
+/External_Deps/curl*
+/External_Deps/net-snmp*
+/External_Deps/openssl*
 /External_Deps/tinyxml/
 /External_Deps/ZipArchive/
-/External_Deps/zlib-*
+/External_Deps/zlib*
+/External_Deps/Debug
+/External_Deps/Release
+/External_Deps/Include
 OCSInventory.ncb
 OCSInventory.suo
 OCSInventory.opensdf
